Bug #3112
closedztest does not honor ZFS_DEBUG
90%
Description
ztest does not check the ZFS_DEBUG environment variable, which specifies which dprintf() messages should be enabled.
Updated by Eric Schrock over 9 years ago
- Status changed from In Progress to Resolved
changeset: 13790:ac6eff781c67
tag: tip
user: Matthew Ahrens <mahrens@delphix.com>
date: Thu Aug 30 05:13:49 2012 -0700
description:
3112 ztest does not honor ZFS_DEBUG
3113 ztest should use watchpoints to protect frozen arc bufs
3114 some leaked nvlists in zfsdev_ioctl
3115 poll(2) returns prematurely in presence of spurious wakeups
Reviewed by: Adam Leventhal <ahl@delphix.com>
Reviewed by: Matt Amdur <Matt.Amdur@delphix.com>
Reviewed by: George Wilson <george.wilson@delphix.com>
Reviewed by: Christopher Siden <chris.siden@delphix.com>
Approved by: Eric Schrock <eric.schrock@delphix.com>